subo mas avances sobre el proyecto donde se aplicaron estilos y colores a la web

--- a/src/components/ItemListcontainer/ItemListcontainer.css
+++ b/src/components/ItemListcontainer/ItemListcontainer.css
@@ -1,4 +1,7 @@
-
+@font-face {
+    font-family: 'Grafitti' ;
+    src: url(../../assets/fonts/sprite-graffiti-regular.ttf);
+}
 
 
 .List__container{
