--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Clothing';
+    src: url(../../assets/fonts/Quicksand-VariableFont_wght.ttf);
+}
+
+
+
 .header{
     background-color: rgb(107, 107, 107);
 }
@@ -12,8 +19,8 @@
     align-items: center;
 }
 .Imagen__Logo{
-    height: 150px;
-    width: 200px;
+    height: 200px;
+    width: 250px;
 }
 .header__titulo{
     color: white;
