subo proyecto One more finalizado

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,6 +2,11 @@
     font-family: 'Clothing';
     src: url(../../assets/fonts/Quicksand-VariableFont_wght.ttf);
 }
+@font-face {
+    font-family: 'Race';
+    src: url(../../assets/fonts/SwipeRaceDemo.ttf);
+}
+
 
 
 
